Update and rename index.html-1.html to index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p><strong>توجه:</strong> معدل درج شده در جدول فوق شامل کلیه دروس بجز آنهایی است که وضعیت ادامه دارد و یا گزارش نشده دارند.</p>
     </div>
     <div class="buttons">
-        <a href="term2.html">ترم بعد</a>
+        <a href="index2.html">ترم بعد</a>
     </div>
 </body>
 </html>
