--- a/index2.html
+++ b/index2.html
@@ -36,8 +36,8 @@
         <p><strong>توجه:</strong> معدل درج شده در جدول فوق شامل کلیه دروس بجز آنهایی است که وضعیت ادامه دارد و یا گزارش نشده دارند.</p>
     </div>
     <div class="buttons">
-        <a href="term1.html">ترم قبل</a>
-        <a href="term3.html">ترم بعد</a>
+        <a href="index.html">ترم قبل</a>
+        <a href="index3.html">ترم بعد</a>
     </div>
 </body>
 </html>
