--- a/index3.html
+++ b/index3.html
@@ -36,7 +36,7 @@
         <p><strong>توجه:</strong> معدل درج شده در جدول فوق شامل کلیه دروس بجز آنهایی است که وضعیت ادامه دارد و یا گزارش نشده دارند.</p>
     </div>
     <div class="buttons">
-        <a href="term2.html">ترم قبل</a>
+        <a href="index2.html">ترم قبل</a>
     </div>
 </body>
 </html>
